# ants

./: README.md  ants.cabal  stack.yaml
src/: Main.hs
